<resources>
    <string name="app_name">Mizo Go Bible</string>
    <string name="default_web_client_id">1043806493962-8e2rorfq0ma27vpokahrca6el80fqe01.apps.googleusercontent.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mizo Go Bible</string>
    <string name="nav_header_subtitle">-Khampat Media</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Bible</string>
    <string name="menu_bookmark">Bookmarks</string>
    <string name="menu_pin">Pins</string>
    <string name="menu_search">Search</string>
    <string name="menu_you">You</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="about">About</string>
    <string name="feedback">Feedback</string>
    <string name="others">Others</string>
    <string name="menu_note">Notes</string>
    <string name="genesis">Genesis</string>
    <string name="quiz_notes">1. Zawhna 10 a awm ang.\n2. Zawhna pakhat atan second 60 hun pek i ni.</string>
    <string name="bible_quiz_kalphung">BIBLE QUIZ KALPHUNG</string>
    <string name="tan_rawh_le">TAN RAWH LE</string>
    <string name="next_question">NEXT QUESTION</string>
    <string name="d">D</string>
    <string name="c">C</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="zawhna">*?***?****?*</string>
</resources>