<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_24"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_bookmark"
        android:icon="@drawable/ic_bookmark_24"
        android:title="@string/menu_bookmark" />
    <item
        android:id="@+id/nav_note"
        android:icon="@drawable/notes"
        android:title="@string/menu_note"
        android:visible="false" />
    <item
        android:id="@+id/nav_pin"
        android:icon="@drawable/ic_pin_24"
        android:title="@string/menu_pin" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_search_24"
        android:title="@string/menu_search"
        android:visible="false" />
    <item
        android:id="@+id/nav_you"
        android:icon="@drawable/ic_person_24"
        android:title="@string/menu_you" />
</menu>